# otclient

./: .travis.yml  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: analysis-sonarcloud.yml  build-docker.yml  build-vcpkg.yml  codeql-analysis.yml
data/locales/: de.lua  es.lua  pl.lua  pt.lua  sv.lua
modules/client/: client.lua
modules/client_entergame/: characterlist.lua  entergame.lua  entergame.otui
modules/client_locales/: locales.lua  neededtranslations.lua
modules/client_options/: graphics.otui  options.lua
modules/client_serverlist/: addserver.otui
modules/client_terminal/: commands.lua
modules/client_topmenu/: topmenu.lua
modules/corelib/: keyboard.lua
modules/game_battle/: battle.lua
modules/game_combatcontrols/: combatcontrols.lua
modules/game_console/: console.lua
modules/game_cooldown/: cooldown.lua
modules/game_healthcircle/: game_healthcircle.lua
modules/game_healthinfo/: healthinfo.lua
modules/gamelib/: const.lua  (+4 more)
src/: main.cpp
src/client/: CMakeLists.txt  animatedtext.cpp  client.cpp  client.h  config.h  const.h  creature.cpp  declarations.h  game.cpp  game.h  global.h  item.cpp  item.h  lightview.h  localplayer.cpp  localplayer.h  luafunctions.cpp  protocolcodes.h  protocolgame.h  protocolgameparse.cpp  thing.cpp
src/client/lua/: luafunctions.cpp  luavaluecasts.cpp  luavaluecasts.h
src/client/manager/: creatures.cpp  creatures.h  houses.cpp  houses.h  mapio.cpp  shadermanager.cpp  shadermanager.h  spritemanager.cpp  spritemanager.h  thingtypemanager.cpp  thingtypemanager.h  towns.cpp  towns.h
src/client/map/: lightview.cpp  lightview.h  map.cpp  map.h  mapview.cpp  mapview.h  minimap.cpp  minimap.h  tile.cpp  tile.h
src/client/painter/: creaturepainter.cpp  creaturepainter.h  lightviewpainter.cpp  lightviewpainter.h  mapviewpainter.cpp  mapviewpainter.h  thingpainter.cpp  thingpainter.h  tilepainter.cpp  tilepainter.h
src/client/protocol/: protocolcodes.h  protocolgame.cpp  protocolgame.h  protocolgameparse.cpp  protocolgamesend.cpp
src/client/thing/: effect.cpp  effect.h  item.cpp  item.h  missile.cpp  missile.h  thing.cpp  thing.h
src/client/thing/creature/: creature.cpp  creature.h  localplayer.cpp  localplayer.h  outfit.cpp  outfit.h  player.cpp  player.h
src/client/thing/text/: animatedtext.cpp  animatedtext.h  statictext.cpp  statictext.h
src/client/thing/type/: container.cpp  container.h  itemtype.cpp  itemtype.h  thingstype.h  thingtype.cpp  thingtype.h
src/client/ui/: uicreature.cpp  uicreature.h  uiitem.cpp  uiitem.h  uimap.cpp  uimap.h  uimapanchorlayout.cpp  uimapanchorlayout.h  uiminimap.cpp  uiminimap.h  uiprogressrect.cpp  uiprogressrect.h  uisprite.cpp  uisprite.h
src/client/util/: animator.cpp  animator.h  position.h
vc14/: otclient.vcxproj  otclient.vcxproj.filters
vc16/: otclient.sln  otclient.vcxproj  otclient.vcxproj.filters
(+180 files in other folders)
